@@ -42,7 +42,6 @@ import org.eclipse.jetty.websocket.api.UpgradeRequest;
 import org.eclipse.jetty.websocket.api.util.WSURI;
 import org.eclipse.jetty.websocket.client.ClientUpgradeRequest;
 import org.eclipse.jetty.websocket.client.WebSocketClient;
-import org.eclipse.jetty.websocket.core.WebSocketComponents;
 import org.eclipse.jetty.websocket.server.WebSocketUpgradeHandler;
 import org.eclipse.jetty.websocket.tests.AnnoMaxMessageEndpoint;
 import org.eclipse.jetty.websocket.tests.CloseTrackingEndpoint;
@@ -54,6 +53,8 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
@@ -62,6 +63,7 @@ import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -120,49 +122,23 @@ public class WebSocketClientTest
         server.stop();
     }
 
-    @Test
-    public void testCustomizeExecutorDirectly() throws Exception
+    @ParameterizedTest
+    @ValueSource(booleans = {false, true})
+    public void testCustomizeExecutorDirectly(boolean startHttpClient) throws Exception
     {
         Executor executor = Executors.newFixedThreadPool(50);
         HttpClient httpClient = new HttpClient();
         httpClient.setExecutor(executor);
         try
         {
-            httpClient.start();
+            if (startHttpClient)
+                httpClient.start();
             WebSocketClient webSocketClient = new WebSocketClient(httpClient);
             try
             {
                 webSocketClient.start();
-                Executor inuseExecutor = webSocketClient.getExecutor();
-                assertSame(executor, inuseExecutor);
-            }
-            finally
-            {
-                webSocketClient.stop();
-            }
-        }
-        finally
-        {
-            httpClient.stop();
-        }
-    }
-
-    @Test
-    public void testCustomizeWebSocketComponentsExecutor() throws Exception
-    {
-        HttpClient httpClient = new HttpClient();
-        try
-        {
-            httpClient.start();
-            Executor executor = Executors.newFixedThreadPool(50);
-            WebSocketComponents webSocketComponents = new WebSocketComponents(null, null,
-                null, null, null, executor);
-            WebSocketClient webSocketClient = new WebSocketClient(httpClient, webSocketComponents);
-            try
-            {
-                webSocketClient.start();
-                Executor inuseExecutor = webSocketClient.getExecutor();
-                assertSame(executor, inuseExecutor);
+                Executor wsExecutor = webSocketClient.getExecutor();
+                assertSame(executor, wsExecutor);
             }
             finally
             {
@@ -333,6 +309,7 @@ public class WebSocketClientTest
             assertThat("Message", received, containsString("Hello World"));
 
             ByteBuffer bufReceived = cliSock.binaryMessageQueue.poll(5, TimeUnit.SECONDS);
+            assertNotNull(bufReceived);
             received = BufferUtil.toUTF8String(bufReceived.slice());
             assertThat("Message", received, containsString(parts[0] + parts[1] + parts[2]));
         }
@@ -407,7 +384,7 @@ public class WebSocketClientTest
         request.setSubProtocols("echo");
         Future<Session> future = client.connect(cliSock, wsUri, request);
 
-        try (Session sess = future.get(5, TimeUnit.SECONDS))
+        try (Session ignored = future.get(5, TimeUnit.SECONDS))
         {
             Assertions.assertTrue(cliSock.connectLatch.await(1, TimeUnit.SECONDS));
 
@@ -428,7 +405,7 @@ public class WebSocketClientTest
     }
 
     /**
-     * Ensure that <code>@WebSocket(maxTextMessageSize = 100*1024)</code> behaves as expected.
+     * Ensure that {@code @WebSocket(maxTextMessageSize = 100*1024)} behaves as expected.
      *
      * @throws Exception on test failure
      */
@@ -459,6 +436,7 @@ public class WebSocketClientTest
 
             // wait for message from server
             String received = cliSock.messageQueue.poll(5, TimeUnit.SECONDS);
+            assertNotNull(received);
             assertThat("Message", received.length(), is(size));
         }
     }
@@ -483,9 +461,9 @@ public class WebSocketClientTest
             Map<String, List<String>> parameterMap = req.getParameterMap();
             assertThat("Parameter Map", parameterMap, notNullValue());
 
-            assertThat("Parameter[snack]", parameterMap.get("snack"), is(Arrays.asList(new String[]{"cashews"})));
-            assertThat("Parameter[amount]", parameterMap.get("amount"), is(Arrays.asList(new String[]{"handful"})));
-            assertThat("Parameter[brand]", parameterMap.get("brand"), is(Arrays.asList(new String[]{"off"})));
+            assertThat("Parameter[snack]", parameterMap.get("snack"), is(List.of("cashews")));
+            assertThat("Parameter[amount]", parameterMap.get("amount"), is(List.of("handful")));
+            assertThat("Parameter[brand]", parameterMap.get("brand"), is(List.of("off")));
 
             assertThat("Parameter[cost]", parameterMap.get("cost"), nullValue());
 
